syntax = "proto3";

package pb;

import "data.proto";

option go_package = "server-test/pb";

message DataInfoResquest{
}

message DataInfoRespone{
    repeated DataInfo data = 1;
}

message DataPostResqest{
    int32 id = 1;
    string name = 2;
    string fullname = 3;
}

message DataPostRespone{
    string notice = 1;
}

message DataUpdateResqest{
    string oldname = 1;
    string newname = 2;
    string newfullname = 3;
}

message DataUpdateRespone{
    string notice = 1;
}

message ExportDataResquest{
    string nametemplate = 1;
}

message ExportDataRespone{
    string pathExport = 1;
}

message ImportDataResquest{
    bytes data = 1;
    string name = 2;
}

message ImportDataRespone{
    string notice = 1;
}


message TestResquest{
    string testdata = 1;
}

message TestRespone{
    string notice = 1;
}

message SignUpResquest{
 
}

message SignUpRespone{
    string status  = 1;
    int64 codeHttp  = 2;
    string message = 3;
}



message SignInResquest{
   
}

message SignInRespone{
    string status  = 1;
    int64 codeHttp  = 2;
    UserAccInfo userAccInfo = 3;
    string token = 4;
}


message FileUploadInfoResquest{
   
}

message FileUploadInfoRespone{
    string status  = 1;
    int64 codeHttp  = 2;
    repeated FileUploadInfo fileInfoList = 3;
}


message FileUploadShortInfoResquest{
   string idfile = 1;
}

message FileUploadShortInfoRespone{
    string status  = 1;
    int64 codeHttp  = 2;
    FileUploadInfo fileShortInfo = 3;
}


message GetListServiceUploadResquest{

}
 
message GetListServiceUploadRespone{
    repeated ServiceInfo serviceInfo = 1;
}


message GetListServiceProcessResquest{
    string idServiceUpload = 1;
}
 
message GetListServiceProcessRespone{
    repeated ServiceInfo serviceInfoProcess = 1;
}


message GetListFunctionProcessResquest{
    string idServiceProcess = 1;
}
 
message GetListFunctionProcessRespone{
    repeated ServiceInfo functionInfoProcess = 1;
}


