syntax = "proto3";

package pb_storage;


option go_package = "server-test/server-process-data/pb_processing";

message DataInfo1{
    string test = 1;
}

message FileInfoProcess {
    string filename = 1;
    string linkFile = 2;
    string idfile = 3;
    string checkSum = 4;
}